@@ -7158,6 +7158,9 @@ or the values in the
 list.
 More than one value may be specified,
 with all values separated by commas.
+The default may be a string of
+comma-separated default values,
+or a list of the default values.
 
 .TP
 .RI PackageOption( key ", " help ", " default )
